<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee">


        <TextView
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="사진 등록"
            android:id="@+id/setpic_title_textView"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />

        <TextView
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/setpic_text"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="20dp"
            android:singleLine="false"
            android:textColor="#000000" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/pic1"
                android:id="@+id/setPicimageView1"
                android:src="@drawable/unknown"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/pic2"
                android:id="@+id/setPicimageView2"
                android:src="@drawable/unknown"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/pic3"
                android:id="@+id/setPicimageView3"
                android:src="@drawable/unknown"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/pic4"
                android:id="@+id/setPicimageView4"
                android:src="@drawable/unknown"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/pic5"
                android:id="@+id/setPicimageView5"
                android:src="@drawable/unknown"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/setcall_btn_next"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</ScrollView>