<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="화난 목소리 측정 결과"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:padding="20dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/home"
            android:layout_gravity="right|top"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/seekbar_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:id="@+id/setragevoice_btn_set" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tryagain"
            android:id="@+id/setragevoice_btn_remeasure" />
    </LinearLayout>

    <TextView
        android:background="@drawable/border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setragevoice_guidetext"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="20dp"
        android:singleLine="false"
        android:textColor="#000000" />


</LinearLayout>
