<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="연락처 등록"
            android:id="@+id/setpic_title_textView"
            android:layout_gravity="center_horizontal|top"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/home"
            android:src="@drawable/home"
            android:layout_gravity="right|top"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp" />

    </FrameLayout>

    <TextView
        android:background="@drawable/border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setsms_text"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="15dp"
        android:singleLine="false"
        android:textColor="#000000" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginTop="20dp">
        <TableRow>

            <TextView
                android:id="@+id/textinName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/border_color"
                android:hint="이름"
                android:layout_marginLeft="15dp"
                android:padding="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/textin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:hint="전화번호 - 여기를 눌러주세요."
                android:background="@drawable/border_color"
                android:phoneNumber="true"
                android:layout_marginRight="5dp"
                android:padding="5dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="+"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:id="@+id/setsms_btn_set" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nexttime"
            android:id="@+id/setsms_btn_nexttime" />
    </LinearLayout>

</LinearLayout>